--- a/sprintspear_frontend_v1/package.json
+++ b/sprintspear_frontend_v1/package.json
@@ -11,13 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.3",
-    "@mui/material": "^6.1.3",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "gantt-task-react": "^0.3.9",
+    "lucide-react": "^0.451.0",
     "next": "14.2.13",
     "numeral": "^2.0.6",
     "react": "^18",
