--- a/sprintspear_frontend_v1/package.json
+++ b/sprintspear_frontend_v1/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/x-data-grid": "^7.21.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
